# packguard

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  compose.yaml  pyproject.toml  requirements.txt  run.py  setup.sh
.github/workflows/: ci.yml
config/: packguard.default.json
data/: popular_packages.txt
data/intel/: malicious_packages.json
docs/: release-checklist.md
examples/hooks/: npm-safe-install.sh  pip-safe-install.sh
src/mpd/: __init__.py  cli.py  config.py  exceptions.py  logger.py  models.py
src/mpd/analyzers/: __init__.py  base.py  ollama_analyzer.py
src/mpd/core/: detector.py
src/mpd/downloaders/: __init__.py  base.py  npm.py  pypi.py
src/mpd/extractors/: __init__.py  base.py  npm_extractor.py  pypi_extractor.py
src/mpd/scanners/: __init__.py  static.py  typosquat.py
src/mpd/utils/: __init__.py  file_utils.py  reporting.py
src/packguard/: __init__.py  __main__.py  cli.py  config.py  errors.py  logging.py  models.py
src/packguard/ai/: __init__.py  anthropic.py  base.py  compatible.py  factory.py  gemini.py  ollama.py  openai.py
src/packguard/engine/: __init__.py  pipeline.py  scoring.py
src/packguard/extractors/: __init__.py  archive.py
src/packguard/intel/: __init__.py  feed.py  popularity.py
src/packguard/reporting/: __init__.py  console.py  json_report.py
src/packguard/scanners/: __init__.py  behavior.py  static.py  typosquat.py
tests/: test_ai.py  test_cli.py  test_config.py  test_detector.py  test_downloaders.py  test_extractors.py  test_reporting.py  test_scanners.py  test_scoring.py
(+5 files in other folders)
